调整了许多以适配vercel的无服务器模式

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/app.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
     },
     {
@@ -13,19 +13,14 @@
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "frontend/static/$1"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "backend/app.py"
+      "dest": "/frontend/static/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "backend/app.py"
+      "dest": "/api/index.py"
     }
   ],
   "env": {
-    "FLASK_ENV": "production",
-    "FLASK_APP": "backend/app.py"
+    "FLASK_ENV": "production"
   }
 } 
