--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.py",
+      "src": "backend/app.py",
       "use": "@vercel/python"
     },
     {
@@ -13,14 +13,19 @@
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "/frontend/static/$1"
+      "dest": "frontend/static/$1"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "backend/app.py"
     },
     {
       "src": "/(.*)",
-      "dest": "/api/index.py"
+      "dest": "backend/app.py"
     }
   ],
   "env": {
-    "FLASK_ENV": "production"
+    "FLASK_ENV": "production",
+    "FLASK_APP": "backend/app.py"
   }
 } 
